tests/sksl/errors/ReservedNameSizeof.glsl
### Compilation failed:

error: 1: 'sizeof' is a reserved word
1 error
